# espDos

./: .gitignore  .gitmodules  Makefile  README.md
asm/: README.md  bootstub.asm  build_kernel.sh  count.asm  hello.asm  hellotr.asm  julia.asm  life.asm  loader.asm  mandel.asm  matrix.asm  primes.asm  scp_to_nasm.py  shell.asm  snake.asm
docs/: c5-progress.md  integrity.md  mandelbrot-performance.md  roadmap.md  testing.md
docs/research/: 2026-05-05-roadmap-and-cool-factor.md
docs/superpowers/plans/: 2026-05-04-host-kernel-boot.md  2026-05-04-kernel-host-verification.md  2026-05-07-c5-dual-target.md
docs/superpowers/specs/: 2026-05-04-esp32-dos-port-design.md  2026-05-07-c5-dual-target-design.md
firmware/: CMakeLists.txt  Kconfig.projbuild  partitions.csv  sdkconfig  sdkconfig.before-perf  sdkconfig.before-psram  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32s3
firmware/components/bios/: CMakeLists.txt  bios.c
firmware/components/bios/include/: bios.h
firmware/components/display/: CMakeLists.txt  Kconfig  display.c  display_log.c  esp_lcd_st7735_vendor.c  render_sharp.c  render_subpixel.c  st7735_panel.c
firmware/components/display/include/: display.h  display_internal.h  font_6x8.h  font_6x8_subpixel.h
firmware/components/emu8086/: 8086tiny.c  CMakeLists.txt  emu8086.c
firmware/components/emu8086/include/: emu8086.h
firmware/components/esp8086/: CMakeLists.txt  esp8086.c  esp8086_facade.c
firmware/components/esp8086/include/: esp8086.h
firmware/components/kernel_blob/: CMakeLists.txt  kernel_blob.c
firmware/components/kernel_blob/include/: kernel_blob.h
firmware/main/: CMakeLists.txt  espdos.c
host/: fat12_image.c  fat12_image.h  host_bios.c  host_bios.h  main.c  test_kernel.c  tests.c  tests.h
tests/emu/: Makefile  test_bootstub.c  test_display_ansi_strip.c  test_display_ring_buffer.c  test_fininit_stack.c  test_hello.c  test_helpers.c  test_helpers.h  test_jmp_near.c  test_julia.c  test_kernel_banner.c  test_kernel_first_step.c  test_loader.c  test_mandel.c  test_memory_bounds.c  test_shell_mandel.c  test_shell_matrix.c  test_shell_snake.c  test_subpixel_glyph_table.c
tools/: build_disk.py  build_subpixel_font.py
